test/testdata/classes/methods/init/return_value_error.lox
class Foo {
  init() {
    fun() {
      return 1;
    }();
    // error: init() cannot return a value
    // lint error: init() cannot return a value
    return 2;
  }
}

_ = Foo;
